// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook-api should return mock components data 1`] = `
[
  {
    "description": "",
    "id": "components-mycomponent",
    "name": "Components/Mycomponent",
    "props": [],
    "variants": {
      "components-mycomponent--simple": {
        "componentFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src",
        "componentPath": undefined,
        "id": "components-mycomponent--simple",
        "importPath": "./src/components/MyComponent.stories.jsx",
        "kind": "Components/MyComponent",
        "name": "Simple",
        "parameters": {
          "__id": "components-mycomponent--simple",
          "docsOnly": false,
          "fileName": "./src/components/MyComponent.stories.jsx",
        },
        "story": "Simple",
        "storyFileFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src/src/components/MyComponent.stories.jsx",
        "title": "Components/MyComponent",
      },
    },
  },
  {
    "description": "",
    "id": "components-myothercomponent",
    "name": "Components/Myothercomponent",
    "props": [],
    "variants": {
      "components-myothercomponent--simple": {
        "componentFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src",
        "componentPath": undefined,
        "id": "components-myothercomponent--simple",
        "importPath": "./src/components/MyOtherComponent.stories.jsx",
        "kind": "Example/Button",
        "name": "Simple",
        "parameters": {
          "__id": "components-myothercomponent--simple",
          "docsOnly": false,
          "fileName": "./src/components/MyOtherComponent.stories.jsx",
        },
        "story": "Simple",
        "storyFileFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src/src/components/MyOtherComponent.stories.jsx",
        "title": "Components/MyOtherComponent",
      },
    },
  },
]
`;

exports[`storybook-api should match snapshot for component structure 1`] = `
[
  {
    "description": "",
    "id": "components-mycomponent",
    "name": "Components/Mycomponent",
    "props": [],
    "variants": {
      "components-mycomponent--simple": {
        "componentFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src",
        "componentPath": undefined,
        "id": "components-mycomponent--simple",
        "importPath": "./src/components/MyComponent.stories.jsx",
        "kind": "Components/MyComponent",
        "name": "Simple",
        "parameters": {
          "__id": "components-mycomponent--simple",
          "docsOnly": false,
          "fileName": "./src/components/MyComponent.stories.jsx",
        },
        "story": "Simple",
        "storyFileFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src/src/components/MyComponent.stories.jsx",
        "title": "Components/MyComponent",
      },
    },
  },
  {
    "description": "",
    "id": "components-myothercomponent",
    "name": "Components/Myothercomponent",
    "props": [],
    "variants": {
      "components-myothercomponent--simple": {
        "componentFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src",
        "componentPath": undefined,
        "id": "components-myothercomponent--simple",
        "importPath": "./src/components/MyOtherComponent.stories.jsx",
        "kind": "Example/Button",
        "name": "Simple",
        "parameters": {
          "__id": "components-myothercomponent--simple",
          "docsOnly": false,
          "fileName": "./src/components/MyOtherComponent.stories.jsx",
        },
        "story": "Simple",
        "storyFileFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src/src/components/MyOtherComponent.stories.jsx",
        "title": "Components/MyOtherComponent",
      },
    },
  },
]
`;

exports[`storybook-api should match snapshot for individual components: component-0-Components/Mycomponent 1`] = `
{
  "description": "",
  "id": "components-mycomponent",
  "name": "Components/Mycomponent",
  "props": [],
  "variants": {
    "components-mycomponent--simple": {
      "componentFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src",
      "componentPath": undefined,
      "id": "components-mycomponent--simple",
      "importPath": "./src/components/MyComponent.stories.jsx",
      "kind": "Components/MyComponent",
      "name": "Simple",
      "parameters": {
        "__id": "components-mycomponent--simple",
        "docsOnly": false,
        "fileName": "./src/components/MyComponent.stories.jsx",
      },
      "story": "Simple",
      "storyFileFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src/src/components/MyComponent.stories.jsx",
      "title": "Components/MyComponent",
    },
  },
}
`;

exports[`storybook-api should match snapshot for individual components: component-0-Components/Mycomponent-props 1`] = `[]`;

exports[`storybook-api should match snapshot for individual components: component-0-Components/Mycomponent-story-components-mycomponent--simple 1`] = `
{
  "componentFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src",
  "componentPath": undefined,
  "id": "components-mycomponent--simple",
  "importPath": "./src/components/MyComponent.stories.jsx",
  "kind": "Components/MyComponent",
  "name": "Simple",
  "parameters": {
    "__id": "components-mycomponent--simple",
    "docsOnly": false,
    "fileName": "./src/components/MyComponent.stories.jsx",
  },
  "story": "Simple",
  "storyFileFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src/src/components/MyComponent.stories.jsx",
  "title": "Components/MyComponent",
}
`;

exports[`storybook-api should match snapshot for individual components: component-1-Components/Myothercomponent 1`] = `
{
  "description": "",
  "id": "components-myothercomponent",
  "name": "Components/Myothercomponent",
  "props": [],
  "variants": {
    "components-myothercomponent--simple": {
      "componentFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src",
      "componentPath": undefined,
      "id": "components-myothercomponent--simple",
      "importPath": "./src/components/MyOtherComponent.stories.jsx",
      "kind": "Example/Button",
      "name": "Simple",
      "parameters": {
        "__id": "components-myothercomponent--simple",
        "docsOnly": false,
        "fileName": "./src/components/MyOtherComponent.stories.jsx",
      },
      "story": "Simple",
      "storyFileFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src/src/components/MyOtherComponent.stories.jsx",
      "title": "Components/MyOtherComponent",
    },
  },
}
`;

exports[`storybook-api should match snapshot for individual components: component-1-Components/Myothercomponent-props 1`] = `[]`;

exports[`storybook-api should match snapshot for individual components: component-1-Components/Myothercomponent-story-components-myothercomponent--simple 1`] = `
{
  "componentFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src",
  "componentPath": undefined,
  "id": "components-myothercomponent--simple",
  "importPath": "./src/components/MyOtherComponent.stories.jsx",
  "kind": "Example/Button",
  "name": "Simple",
  "parameters": {
    "__id": "components-myothercomponent--simple",
    "docsOnly": false,
    "fileName": "./src/components/MyOtherComponent.stories.jsx",
  },
  "story": "Simple",
  "storyFileFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src/src/components/MyOtherComponent.stories.jsx",
  "title": "Components/MyOtherComponent",
}
`;

exports[`storybook-api should match snapshot for component variants: component-0-Components/Mycomponent-variant-components-mycomponent--simple 1`] = `
{
  "componentFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src",
  "componentPath": undefined,
  "id": "components-mycomponent--simple",
  "importPath": "./src/components/MyComponent.stories.jsx",
  "kind": "Components/MyComponent",
  "name": "Simple",
  "parameters": {
    "__id": "components-mycomponent--simple",
    "docsOnly": false,
    "fileName": "./src/components/MyComponent.stories.jsx",
  },
  "story": "Simple",
  "storyFileFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src/src/components/MyComponent.stories.jsx",
  "title": "Components/MyComponent",
}
`;

exports[`storybook-api should match snapshot for component variants: component-1-Components/Myothercomponent-variant-components-myothercomponent--simple 1`] = `
{
  "componentFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src",
  "componentPath": undefined,
  "id": "components-myothercomponent--simple",
  "importPath": "./src/components/MyOtherComponent.stories.jsx",
  "kind": "Example/Button",
  "name": "Simple",
  "parameters": {
    "__id": "components-myothercomponent--simple",
    "docsOnly": false,
    "fileName": "./src/components/MyOtherComponent.stories.jsx",
  },
  "story": "Simple",
  "storyFileFullPath": "/Users/matsumotoyoshio/Works/mcps/storybook-mcp/src/src/components/MyOtherComponent.stories.jsx",
  "title": "Components/MyOtherComponent",
}
`;
